# QmlFormatter

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/QmlFormatter/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/QmlFormatter/: CommandLineParser.cpp  CommandLineParser.hpp
